--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -23,25 +23,102 @@
             </div>
             <div class="header__menu js-hamburger-menu">
                 <div class="header__menu_block">
+                    <div class="header__menu_mobile">
+                        <a href="#" class="header__actions_link">
+                            <img src="../assets/images/icons/search-normal.svg" alt="">
+                            <span>Поиск</span>
+                        </a>
+                        <a href="#" class="header__actions_link">
+                            <img src="../assets/images/icons/messages.svg" alt="">
+                            <span>Поиск</span>
+                        </a>
+                        <a href="#" class="header__actions_link">
+                            <img src="../assets/images/icons/empty-wallet-add.svg" alt="">
+                            <span>Поиск</span>
+                        </a>
+                        <a href="#" class="header__actions_link">
+                            <img src="../assets/images/icons/bag-2.svg" alt="">
+                            <span>Поиск</span>
+                        </a>
+                    </div>
                     <a href="index.html" class="header__menu_item active">Главная</a>
                     <a href="catalog.html" class="header__menu_item">Каталог</a>
                     <a href="cart.html" class="header__menu_item">Информация</a>
                     <a href="vpn.html" class="header__menu_item">Карта лояльности</a>
+                    <div class="catalog__tabs header__menu_catalog">
+                        <div class="catalog__tab catalog__tab_name">
+                            <span class="catalog__tab_block">
+                                <img class="catalog__tab_img" src="assets/images/home/icons/catalog.svg" alt="">
+                                <span class="catalog__tab_title">Catalog</span>
+                            </span>
+                        </div>
+                        <button class="catalog__btn">
+                            <span class="catalog__btn_name">Xbox</span>
+                            <img class="catalog__btn_img" src="assets/images/icons/arrow-down.svg" alt="">
+                        </button>
+                        <div class="catalog__tabs_content">
+                            <a class="catalog__tab" href="#">
+                                <span class="catalog__tab_block">
+                                    <img class="catalog__tab_img" src="assets/images/home/icons/pc.svg" alt="">
+                                    <span class="catalog__tab_title">PC</span>
+                                </span>
+                            </a>
+                            <a class="catalog__tab" href="#">
+                                <span class="catalog__tab_block">
+                                    <img class="catalog__tab_img" src="assets/images/home/icons/playstation.svg" alt="">
+                                    <span class="catalog__tab_title">PlayStation</span>
+                                </span>
+                            </a>
+                            <a class="catalog__tab active" href="#">
+                                <span class="catalog__tab_block">
+                                    <img class="catalog__tab_img" src="assets/images/home/icons/xbox.svg" alt="">
+                                    <span class="catalog__tab_title">Xbox</span>
+                                </span>
+                            </a>
+                            <a class="catalog__tab" href="#">
+                                <span class="catalog__tab_block">
+                                    <img class="catalog__tab_img" src="assets/images/home/icons/nintendo.svg" alt="">
+                                    <span class="catalog__tab_title">Nintendo</span>
+                                </span>
+                            </a>
+                            <a class="catalog__tab" href="#">
+                                <span class="catalog__tab_block">
+                                    <img class="catalog__tab_img" src="assets/images/home/icons/giftcard.svg" alt="">
+                                    <span class="catalog__tab_title">Gift Cards</span>
+                                </span>
+                            </a>
+                            <a class="catalog__tab" href="#">
+                                <span class="catalog__tab_block">
+                                    <img class="catalog__tab_img" src="assets/images/home/icons/subs.svg" alt="">
+                                    <span class="catalog__tab_title">Subscriptions</span>
+                                </span>
+                            </a>
+                            <a class="catalog__tab" href="#">
+                                <span class="catalog__tab_block">
+                                    <img class="catalog__tab_img" src="assets/images/home/icons/gamepoints.svg" alt="">
+                                    <span class="catalog__tab_title">Game Points</span>
+                                </span>
+                            </a>
+                        </div>
+                        <div class="catalog__bg"></div>
+                    </div>
                 </div>
             </div>
             <div class="header__actions">
-                <a href="#" class="header__actions_link">
-                    <img src="../assets/images/icons/search-normal.svg" alt="">
-                </a>
-                <a href="#" class="header__actions_link">
-                    <img src="../assets/images/icons/messages.svg" alt="">
-                </a>
-                <a href="#" class="header__actions_link">
-                    <img src="../assets/images/icons/empty-wallet-add.svg" alt="">
-                </a>
-                <a href="#" class="header__actions_link">
-                    <img src="../assets/images/icons/bag-2.svg" alt="">
-                </a>
+                <div class="header__actions_block">
+                    <a href="#" class="header__actions_link">
+                        <img src="../assets/images/icons/search-normal.svg" alt="">
+                    </a>
+                    <a href="#" class="header__actions_link">
+                        <img src="../assets/images/icons/messages.svg" alt="">
+                    </a>
+                    <a href="#" class="header__actions_link">
+                        <img src="../assets/images/icons/empty-wallet-add.svg" alt="">
+                    </a>
+                    <a href="#" class="header__actions_link">
+                        <img src="../assets/images/icons/bag-2.svg" alt="">
+                    </a>
+                </div>
                 <a href="#" class="header__actions_admin">
                     <img src="../assets/images/home/card-image.png" alt="">
                 </a>
