--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -4,12 +4,16 @@
     margin-left: auto;
     margin-right: auto;
     padding: 0 20px;
+
+    &-fluid {
+        padding: 0;
+    }
 }
 
 .main {
     padding-top: 100px;
     position: relative;
-    z-index: 2;
+    z-index: 3;
 }
 
 .section {
@@ -279,6 +283,10 @@
         object-fit: cover;
         border-bottom: 1px solid rgb(132, 127, 125);
         border-radius: 10px;
+
+        @include mobile {
+            height: 220px;
+        }
     }
 
     &__content {
@@ -295,6 +303,13 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+
+        @include mobile {
+            width: calc(100% - 18px);
+            gap: 5px;
+            padding: 6px;
+            bottom: 70px;
+        }
     }
 
     &__title {
@@ -308,6 +323,12 @@
         text-overflow: ellipsis;
         overflow: hidden;
         height: 39px;
+
+        @include mobile {
+            width: calc(100% - 10px);
+            font-size: 10px;
+            height: auto;
+        }
     }
 
     &__subtitle {
@@ -319,6 +340,11 @@
         text-overflow: ellipsis;
         overflow: hidden;
         height: max-content;
+
+        @include mobile {
+            width: calc(100% - 20px);
+            font-size: 7px;
+        }
     }
 
     &__label {
@@ -328,6 +354,11 @@
         position: absolute;
         right: 8px;
         top: 8px;
+
+        @include mobile {
+            width: 9px;
+            height: 9px;
+        }
     }
 
     &__discount {
@@ -339,11 +370,19 @@
         padding: 2px 4px;
         border-radius: 6px 0px 0px 6px;
         background: rgb(113, 118, 255);
+
+        @include mobile {
+            font-size: 8px;
+        }
     }
 
     &__price {
         font-size: 24px;
         font-weight: 700;
+
+        @include mobile {
+            font-size: 16px;
+        }
 
         &_cur {
             font-size: 13px;
@@ -352,6 +391,11 @@
             position: relative;
             top: -15px;
             margin-left: 2px;
+
+            @include mobile {
+                font-size: 10px;
+                top: -10px;
+            }
         }
 
         &_old {
@@ -361,6 +405,10 @@
             margin-left: 8px;
             margin-bottom: 2px;
             color: $text-dark;
+
+            @include mobile {
+                font-size: 10px;
+            }
         }
     }
 
@@ -400,6 +448,10 @@
     border-radius: 10px;
     border: 1px solid #33302D;
 
+    @include netbook {
+        height: 110px;
+    }
+
     &__img {
         position: absolute;
         width: 100%;
@@ -427,6 +479,10 @@
         line-height: 1;
         font-family: $font-rubik;
         color: rgb(132, 127, 125);
+
+        @include netbook {
+            font-size: 40px;
+        }
 
         &::after {
             content: "";
@@ -462,6 +518,10 @@
         font-weight: 300;
         color: rgb(255, 108, 61);
         position: relative;
+
+        @include netbook {
+            font-size: 12px;
+        }
 
         &::after {
             content: "";
@@ -499,6 +559,10 @@
     position: relative;
     overflow: hidden;
 
+    @include mobile {
+        padding: 10px 15px;
+    }
+
     &__title {
         font-size: 32px;
         font-family: $font-roboto;
@@ -511,6 +575,11 @@
         .orange {
             color: $orange;
         }
+
+        @include mobile {
+            font-size: 22px;
+            width: 50%;
+        }
     }
 
     &__text {
@@ -519,6 +588,11 @@
         width: 60%;
         position: relative;
         z-index: 2;
+
+        @include mobile {
+            font-size: 10px;
+            width: 50%;
+        }
     }
 
     &__img {
@@ -533,6 +607,11 @@
             object-fit: contain;
             object-position: bottom right;
         }
+
+        @include mobile {
+            width: 45%;
+            height: auto;
+        }
     }
 }
 
@@ -542,18 +621,66 @@
         border-radius: 10px;
         background: #2C2723;
         background: linear-gradient(268.85deg, rgba(79, 79, 79, 0.35) 0.003%, rgba(72, 60, 54, 0.35) 31.276%, rgba(70, 66, 63, 0.35) 48.784%, rgba(72, 60, 54, 0.35) 70.713%, rgba(79, 79, 79, 0.35) 99.998%);
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
         overflow: hidden;
+
+
+        @include mobile {
+            padding: 8px;
+        }
+
+        &_content {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+
+            grid-column-start: 2;
+            grid-column-end: 9;
+
+            @include mobile {
+                display: flex;
+                justify-content: space-between;
+                flex-direction: column;
+                position: fixed;
+                bottom: -101%;
+                left: 0;
+                width: 100%;
+                height: 50vh;
+                background-color: darken($color: #1C1B19, $amount: 5);
+                z-index: 12;
+                overflow: auto;
+                padding-top: 20px;
+                padding-bottom: 30px;
+                border-radius: 10px 10px 0 0;
+                border-top: 2px solid $orange;
+                transition: 200ms ease;
+
+                &.active {
+                    bottom: 0;
+                }
+            }
+        }
     }
 
     &__tab {
+        min-width: 100px;
+        max-width: 150px;
         width: 100%;
         border-bottom: 1px solid transparent;
         transition: 300ms ease;
         display: flex;
         align-items: center;
         justify-content: center;
+
+        &_name {
+            grid-column-start: 0;
+            grid-column-end: 2;
+        }
+
+        @include mobile {
+            max-width: 100%;
+        }
 
         &_block {
             width: 100%;
@@ -568,11 +695,19 @@
             &:hover {
                 filter: brightness(230%);
             }
+
+            @include netbook {
+                padding: 8px;
+            }
         }
 
         &_img {
             height: 30px;
             object-fit: contain;
+
+            @include mobile {
+                height: 25px;
+            }
         }
 
         &_title {
@@ -589,6 +724,64 @@
             filter: brightness(230%);
         }
 
+        @include netbook {
+            /*  display: none;
+
+            &:first-child {
+                display: flex;
+                width: auto;
+            }
+
+            &.active {
+                display: flex;
+                position: absolute;
+            } */
+        }
+
+    }
+
+    &__btn {
+        width: 100%;
+        border: none;
+        border-radius: 10px;
+        background: linear-gradient(270deg, rgba(79, 79, 79, 0.35) 0%, rgba(72, 60, 54, 0.35) 31.28%, rgba(70, 66, 63, 0.35) 48.78%, rgba(72, 60, 54, 0.35) 70.71%, rgba(79, 79, 79, 0.35) 100%);
+        display: none;
+        justify-content: flex-end;
+        align-items: center;
+        margin: 2px;
+
+        @include mobile {
+            display: flex;
+            grid-column-start: 2;
+            grid-column-end: 9;
+        }
+
+        &_name {
+            width: 100%;
+            color: white;
+        }
+
+        &_img {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+        }
+    }
+
+    &__bg {
+        display: none;
+        position: fixed;
+        top: -101%;
+        left: 0;
+        width: 100%;
+        height: 101vh;
+        z-index: 11;
+        background-color: #00000050;
+
+        &.active {
+            top: 0;
+            display: flex;
+        }
     }
 }
 
