--- a/src/assets/scss/_template.scss
+++ b/src/assets/scss/_template.scss
@@ -34,10 +34,10 @@ a {
 button {
     font-family: $font-inter;
 
-    /* &:focus {
+    &:focus {
         outline: none;
         border: none;
-    } */
+    }
 }
 
 img {
@@ -122,7 +122,7 @@ input[type=number] {
         &~span {
             color: $text-dark;
             transition: 300ms ease;
-            font-size: 14px;
+            font-size: 12px;
             font-family: $font-inter;
         }
 
