--- a/src/assets/scss/pages/_catalog.scss
+++ b/src/assets/scss/pages/_catalog.scss
@@ -82,6 +82,10 @@
         .swiper-button-prev:after {
             display: none;
         }
+
+        @include mobile {
+            flex-direction: column;
+        }
     }
 
     &__best {
@@ -98,6 +102,10 @@
             display: flex;
             width: 100%;
             height: 429px;
+
+            @include mobile {
+                height: 180px;
+            }
         }
 
         &_img {
@@ -140,6 +148,10 @@
             height: 452px;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr 1fr;
+
+            @include mobile {
+                height: auto;
+            }
         }
     }
 
@@ -268,6 +280,16 @@
         gap: 20px;
         padding-bottom: 25px;
 
+        @include netbook {
+            grid-template-rows: repeat(2, 1fr);
+        }
+
+
+        @include mobile {
+            display: flex;
+            flex-direction: column;
+        }
+
         &_title {
             display: flex;
             gap: 10px;
@@ -293,6 +315,13 @@
         &_search {
             grid-column-start: 2;
             grid-column-end: 4;
+
+            @include netbook {
+                grid-row-start: 2;
+                grid-row-end: 2;
+                grid-column-start: 1;
+                grid-column-end: 8;
+            }
         }
 
         &_sort {
@@ -302,6 +331,16 @@
             align-items: center;
             justify-content: space-between;
             gap: 10px;
+
+            @include netbook {
+                grid-column-start: 3;
+                grid-column-end: 8;
+            }
+
+            @include mobile {
+                flex-direction: column;
+                align-items: initial;
+            }
         }
 
         &_choose {
@@ -311,8 +350,16 @@
         }
 
         &_select {
+            display: flex;
+            align-items: center;
+            gap: 18px;
             width: 100%;
-            max-width: 186px;
+            max-width: 280px;
+
+            &_text {
+                font-size: 12px;
+                color: $text-dark;
+            }
         }
     }
 
@@ -322,6 +369,16 @@
         gap: 20px;
         padding-top: 15px;
         padding-bottom: 15px;
+
+        @include netbook {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+        }
+
+        @include mobile {
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     &__value {
@@ -358,6 +415,14 @@
         display: grid;
         grid-template-columns: repeat(6, 1fr);
         gap: 20px;
+
+        @include netbook {
+            grid-template-columns: repeat(4, 1fr);
+        }
+
+        @include mobile {
+            grid-template-columns: repeat(2, 1fr);
+        }
     }
 
     &__item {
@@ -367,7 +432,12 @@
 
         .game-card__img {
             height: 305px;
+
+            @include mobile {
+                height: 220px;
+            }
         }
+
 
         .game-card__btn {
             padding: 8px 20px;
@@ -390,6 +460,15 @@
         margin-top: 20px;
         display: flex;
         justify-content: flex-end;
+
+        @include mobile {
+            margin-bottom: 25px;
+
+            .more-btn {
+                width: 100%;
+                text-align: center;
+            }
+        }
     }
 
     &__pagination {
