--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -201,7 +201,7 @@
             }
 
             @include mobile {
-                height: calc(100vh - 100px);
+                height: calc(100vh - 99px);
                 flex-direction: column;
                 justify-content: flex-start;
                 gap: 0;
@@ -213,6 +213,11 @@
             padding: 35px 0;
             position: relative;
             display: flex;
+            justify-content: center;
+
+            @include mobile {
+                width: 100%;
+            }
 
             &::after {
                 content: "";
@@ -230,10 +235,40 @@
             &:hover::after,
             &.active::after {
                 background-color: $orange;
+
+                @include mobile {
+                    background-color: transparent;
+                }
+            }
+
+            &.active {
+                @include mobile {
+                    background: linear-gradient(270deg, rgba(79, 79, 79, 0.35) 0%, rgba(72, 60, 54, 0.35) 31.28%, rgba(70, 66, 63, 0.35) 48.78%, rgba(72, 60, 54, 0.35) 70.71%, rgba(79, 79, 79, 0.35) 100%);
+                }
             }
 
             @include mobile {
                 padding: 25px 0;
+            }
+        }
+
+        &_mobile {
+            display: none;
+            flex-direction: column;
+            gap: 10px;
+            padding-top: 30px;
+            padding-bottom: 20px;
+
+            @include mobile {
+                display: flex;
+            }
+        }
+
+        &_catalog {
+            display: none;
+
+            @include mobile {
+                display: grid;
             }
         }
     }
@@ -306,10 +341,36 @@
         gap: 10px;
         width: 25%;
 
+        &_block {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            gap: 12px;
+
+            @include mobile {
+                display: none;
+            }
+        }
+
         &_link {
             display: flex;
             width: 24px;
             height: 24px;
+
+            @include mobile {
+                width: 100%;
+                height: auto;
+                align-items: center;
+                gap: 15px;
+                font-size: 20px;
+            }
+
+            img {
+                @include mobile {
+                    width: 40px;
+                    height: 40px;
+                }
+            }
 
             &:hover {
                 img {
