--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -640,24 +640,24 @@
 
             @include mobile {
                 display: flex;
-                justify-content: space-between;
+                justify-content: flex-start;
                 flex-direction: column;
                 position: fixed;
                 bottom: -101%;
                 left: 0;
                 width: 100%;
-                height: 50vh;
+                height: 70vh;
                 background-color: darken($color: #1C1B19, $amount: 5);
                 z-index: 12;
                 overflow: auto;
                 padding-top: 20px;
-                padding-bottom: 30px;
+                padding-bottom: 40px;
                 border-radius: 10px 10px 0 0;
                 border-top: 2px solid $orange;
                 transition: 200ms ease;
 
                 &.active {
-                    bottom: 0;
+                    bottom: -10px;
                 }
             }
         }
