--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -361,6 +361,7 @@
                 width: 100%;
                 height: auto;
                 align-items: center;
+                justify-content: center;
                 gap: 15px;
                 font-size: 20px;
             }
