--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -30,15 +30,15 @@
                         </a>
                         <a href="#" class="header__actions_link">
                             <img src="../assets/images/icons/messages.svg" alt="">
-                            <span>Поиск</span>
+                            <span>Тикеты</span>
                         </a>
                         <a href="#" class="header__actions_link">
                             <img src="../assets/images/icons/empty-wallet-add.svg" alt="">
-                            <span>Поиск</span>
+                            <span>Баланс</span>
                         </a>
                         <a href="#" class="header__actions_link">
                             <img src="../assets/images/icons/bag-2.svg" alt="">
-                            <span>Поиск</span>
+                            <span>Корзина</span>
                         </a>
                     </div>
                     <a href="index.html" class="header__menu_item active">Главная</a>
