--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -25,19 +25,19 @@
                 <div class="header__menu_block">
                     <div class="header__menu_mobile">
                         <a href="#" class="header__actions_link">
-                            <img src="../assets/images/icons/search-normal.svg" alt="">
+                            <img src="assets/images/icons/search-normal.svg" alt="">
                             <span>Поиск</span>
                         </a>
                         <a href="#" class="header__actions_link">
-                            <img src="../assets/images/icons/messages.svg" alt="">
+                            <img src="assets/images/icons/messages.svg" alt="">
                             <span>Тикеты</span>
                         </a>
                         <a href="#" class="header__actions_link">
-                            <img src="../assets/images/icons/empty-wallet-add.svg" alt="">
+                            <img src="assets/images/icons/empty-wallet-add.svg" alt="">
                             <span>Баланс</span>
                         </a>
                         <a href="#" class="header__actions_link">
-                            <img src="../assets/images/icons/bag-2.svg" alt="">
+                            <img src="assets/images/icons/bag-2.svg" alt="">
                             <span>Корзина</span>
                         </a>
                     </div>
