--- a/src/assets/scss/pages/_catalog.scss
+++ b/src/assets/scss/pages/_catalog.scss
@@ -460,6 +460,7 @@
         margin-top: 20px;
         display: flex;
         justify-content: flex-end;
+        position: relative;
 
         @include mobile {
             margin-bottom: 25px;
@@ -474,6 +475,9 @@
     &__pagination {
         margin-top: 0px;
         margin-bottom: 40px;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
 
