--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -32,6 +32,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/app.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
     <title>{{ title }}</title>
 </head>
