--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -107,20 +107,20 @@
             <div class="header__actions">
                 <div class="header__actions_block">
                     <a href="#" class="header__actions_link">
-                        <img src="../assets/images/icons/search-normal.svg" alt="">
+                        <img src="assets/images/icons/search-normal.svg" alt="">
                     </a>
                     <a href="#" class="header__actions_link">
-                        <img src="../assets/images/icons/messages.svg" alt="">
+                        <img src="assets/images/icons/messages.svg" alt="">
                     </a>
                     <a href="#" class="header__actions_link">
-                        <img src="../assets/images/icons/empty-wallet-add.svg" alt="">
+                        <img src="assets/images/icons/empty-wallet-add.svg" alt="">
                     </a>
                     <a href="#" class="header__actions_link">
-                        <img src="../assets/images/icons/bag-2.svg" alt="">
+                        <img src="assets/images/icons/bag-2.svg" alt="">
                     </a>
                 </div>
                 <a href="#" class="header__actions_admin">
-                    <img src="../assets/images/home/card-image.png" alt="">
+                    <img src="assets/images/home/card-image.png" alt="">
                 </a>
             </div>
         </div>
