--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -510,6 +510,16 @@
         display: none;
     }
 
+    .splide__slide.is-active {
+        .home-markets__link {
+            display: flex;
+        }
+
+        .home-markets__img_item {
+            filter: none;
+        }
+    }
+
     .swiper-slide-active {
         .home-markets__link {
             display: flex;
@@ -520,7 +530,8 @@
         }
     }
 
-    .swiper {
+
+    .splide__track {
         overflow: visible;
     }
 }
@@ -629,12 +640,20 @@
 
     &__btn {}
 
-    .swiper {
+    .splide__track {
         overflow: visible;
     }
 
-    .swiper-slide {
+    .splide__slide {
         height: auto;
+    }
+
+    .splide__slide {
+        filter: opacity(0.2);
+    }
+
+    .splide__slide.is-visible {
+        filter: none;
     }
 }
 
@@ -645,6 +664,7 @@
     border-radius: 20px;
     box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
     height: 100%;
+    min-height: 350px;
     padding: 12px;
 
     @include mobile {
@@ -768,7 +788,7 @@
         max-width: 294px;
     }
 
-    .swiper {
+    .splide__track {
         overflow: visible;
     }
 }
