--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -1,22 +1,44 @@
 .catalog-list-cart {
     margin-top: 40px;
+
+    @include mobile {
+        margin-top: 20px;
+        padding-bottom: 20px;
+    }
 }
 
 .cart-item {
     &__block {
-        display: flex;
-        align-items: flex-start;
-        gap: 20px;
+        display: grid;
+        grid-template-columns: minmax(300px, 390px) minmax(450px, 1fr);
+        grid-template-rows: repeat(100, 5px);
+        gap: 0 20px;
+
+        @include mobile {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+            gap: 10px;
+        }
     }
 
     &__img {
-        width: 100%;
-        max-width: 400px;
+        grid-column: 1 / 2;
+        grid-row: 1 / 101;
         position: relative;
 
+        @include mobile {
+            grid-columns: auto;
+            grid-row: auto;
+        }
+
         &_item {
-            height: 500px;
+            height: 100%;
             border-radius: 10px;
+            object-fit: cover;
+
+            @include mobile {
+                height: 500px;
+            }
         }
 
         &_content {
@@ -123,17 +145,25 @@
         }
     }
 
-    &__content {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-    }
-
     &__prices {
-        display: flex;
-        align-items: center;
+        grid-column: 2 / 3;
+        grid-row: 1 / 13;
+
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
         gap: 18px;
+
+        @include netbook {
+            grid-template-columns: 1fr 1fr;
+            grid-row: 1 / 28;
+            gap: 10px;
+        }
+
+        @include mobile {
+            grid-template-columns: 1fr;
+            grid-column: auto;
+            grid-row: auto;
+        }
 
         &_item {
             width: 100%;
@@ -155,6 +185,16 @@
 
             &:focus {
                 border: 1px solid $orange;
+            }
+
+            &:nth-child(3) {
+                @include netbook {
+                    grid-column: 1 / 3;
+                }
+
+                @include mobile {
+                    grid-column: auto;
+                }
             }
         }
 
@@ -192,6 +232,18 @@
     }
 
     &__breadcrumb {
+        grid-column: 2 / 3;
+        grid-row: 15 / 20;
+
+        @include netbook {
+            grid-row: 30 / 35;
+        }
+
+        @include mobile {
+            grid-column: auto;
+            grid-row: auto;
+        }
+
         display: flex;
         justify-content: space-between;
         gap: 10px;
@@ -199,25 +251,26 @@
         &_items {}
     }
 
-    &__return {
-        padding: 7px 12px 7px 35px;
-
-        &::after {
-            right: inherit;
-            left: 10px;
-            top: 65%;
-            transform: translateY(-50%) rotate(180deg);
-        }
-    }
-
     &__desc {
+        grid-column: 2 / 3;
+        grid-row: 22 / 101;
+
         border-radius: 10px;
         background: #1A1917;
-        padding: 22px 25px;
+        padding: 22px 25px 0;
+
+        @include netbook {
+            grid-row: 38 / 101;
+        }
+
+        @include mobile {
+            grid-column: auto;
+            grid-row: auto;
+        }
 
         &_title {
             font-size: 12px;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
         }
 
         &_text {
@@ -227,26 +280,66 @@
             margin-bottom: 30px;
         }
 
-        &_tabs {
-            &_btns {
-                display: flex;
-                gap: 10px;
-                margin-bottom: 10px;
-            }
+    }
 
-            &_content {}
+    &__tabs {
+        grid-column: 2 / 3;
+        grid-row: 52 / 101;
+        z-index: 1;
+        padding: 0 22px;
 
-            &_item {
+        @include netbook {
+            grid-column: 1 / 3;
+            grid-row: auto;
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 10px;
+            background: #1A1917;
+        }
+
+        @include mobile {
+            grid-column: auto;
+            grid-row: auto;
+        }
+
+        &_title {
+            font-size: 12px;
+            margin-bottom: 5px;
+
+            @include netbook {
                 display: none;
-
-
-                &._active {
-                    display: flex;
-                }
             }
         }
 
+        &_btns {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 8px;
+        }
 
+        &_content {}
+
+        &_item {
+            display: none;
+
+
+            &._active {
+                display: flex;
+            }
+        }
+    }
+
+    &__return {
+        padding: 7px 10px 7px 30px;
+        font-size: 9px;
+
+        &::after {
+            right: inherit;
+            font-size: 22px;
+            left: 7px;
+            top: 62%;
+            transform: translateY(-50%) rotate(180deg);
+        }
     }
 }
 
@@ -277,6 +370,10 @@
         &_item {
             object-fit: cover;
         }
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__block {
@@ -303,6 +400,10 @@
         display: flex;
         flex-direction: column;
         gap: 5px;
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__name {
