--- a/src/assets/scss/_template.scss
+++ b/src/assets/scss/_template.scss
@@ -81,10 +81,15 @@ textarea {
     padding: 10px;
     background: transparent;
     color: $text-white;
+    transition: 300ms ease;
 
     &:focus {
         outline: none;
         border: 1px solid $orange;
+    }
+
+    &:hover {
+        border-color: white;
     }
 }
 
@@ -217,12 +222,3 @@ input[type=number] {
     cursor: pointer;
 }
 
-.btn {
-    border-radius: 7px;
-    border: 1px solid var(--text-Dark, #847F7D);
-    background: linear-gradient(270deg, #4F4F4F 0%, #483C36 31.28%, #46423F 48.78%, #483C36 70.71%, #4F4F4F 100%);
-    font-size: 16px;
-    font-weight: 400;
-    padding: 10px 40px;
-    color: $text-white;
-}
