--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -362,7 +362,7 @@
             transition: 300ms ease;
 
             &:hover {
-                color: white;
+                color: $orange;
             }
         }
 
@@ -375,12 +375,14 @@
 
         .swiper-button-next:after,
         .swiper-rtl .swiper-button-prev:after {
+            color: white;
             content: "\2192";
             font-family: 'Courier New', Courier, monospace;
         }
 
         .swiper-button-prev:after,
         .swiper-rtl .swiper-button-next:after {
+            color: white;
             content: "\2190";
             font-family: 'Courier New', Courier, monospace;
         }
@@ -602,6 +604,10 @@
         a {
             color: #83A5FF;
             border-bottom: 1px dashed;
+
+            &:hover {
+                color: $orange;
+            }
         }
     }
 
@@ -667,6 +673,8 @@
     height: 100%;
     min-height: 350px;
     padding: 12px;
+    transition: 200ms ease;
+
 
     @include mobile {
         padding: 5px 12px 5px 0;
@@ -692,7 +700,7 @@
             left: 0;
             top: 0;
             object-fit: cover;
-            filter: contrast(1) opacity(0.1) brightness(0.3) grayscale(1);
+            filter: contrast(1) opacity(0.1) brightness(0.5) grayscale(1);
         }
     }
 
@@ -766,6 +774,14 @@
         &_icon {
             width: 12px;
             height: 12px;
+        }
+    }
+
+    &:hover {
+        border: 1px solid $orange;
+
+        .home-blog-card__img_bg {
+            filter: contrast(1) opacity(0.1) brightness(0.1) grayscale(1);
         }
     }
 }
