--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -374,11 +374,12 @@
                     width: 40px;
                     height: 40px;
                 }
+
             }
 
             &:hover {
                 img {
-                    filter: brightness(10);
+                    filter: brightness(0) saturate(100%) invert(46%) sepia(78%) saturate(646%) hue-rotate(329deg) brightness(102%) contrast(100%);
                 }
             }
         }
